<resources>
    <string name="app_name">Mobile Checkout Demo</string>
    <string name="refund_successful">Refund successful</string>
    <string name="card_stored_successfully_card_token">Card stored successfully</string>
    <string name="card_updated_successfully_card_token">Card updated successfully</string>
    <string name="transaction_reference">Transaction reference</string>
    <string name="amount">Amount</string>
    <string name="order_id">Order ID</string>
    <string name="refund">Refund</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="font">Font</string>
    <string name="color_accent">Color Accent</string>
    <string name="text_color">Text Color</string>
    <string name="please_enter_trannsaction_reference">Please, enter transaction reference.</string>
    <string name="please_enter_amount">Please, enter amount</string>
    <string name="please_enter_order_id">Please, enter Order ID.</string>
    <string name="please_enter_your_order_id_to_check_the_transaciton_status">Please enter your Order ID to check the transaction status</string>
    <string name="select_payment_options">Select payment option</string>
    <string name="store_new_card">Store new card</string>
    <string name="transaction_status">Transaction status</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="pay">Pay</string>

    //Status messages
    <string name="operation_completed_successful">Operation completed successful</string>
    <string name="operation_failed_please_contact_us_for_more_details">Operation failed. Please contact us for more details.</string>
    <string name="operation_failed_please_contact_your_card_issuer_for_more_details">Operation failed. Please contact your card issuer for more details.</string>
    <string name="insufficient_funds_please_contact_your_card_issuer">Insufficient funds. Please contact your card issuer for more information.</string>
    <string name="operation_failed_please_check_your_card_details">Operation failed. Please check your card details and try again or contact your card issuer for more information</string>
    <string name="invalid_amount_please_try_again_or_contact_your_card_issuer">Invalid amount. Please try again or contact your card issuer for more details</string>
    <string name="secure_3d_verification_failed">3D Secure verification failed. Please try again or contact your card issuer for details</string>
    <string name="operation_failed_please_try_again">Operation failed. Please try again.</string>
    <string name="operation_cancelled">Operation cancelled.</string>
</resources>