<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android               ="http://schemas.android.com/apk/res/android"
    xmlns:app                   ="http://schemas.android.com/apk/res-auto"
    android:layout_width        ="match_parent"
    android:layout_height       ="match_parent"
    android:paddingTop          ="20dp"
    android:paddingStart        ="16dp"
    android:paddingEnd          ="16dp">

    <TextView
        android:id                              ="@+id/descriptionTxt"
        android:layout_width                    ="0dp"
        android:layout_height                   ="wrap_content"
        android:textSize                        ="16sp"
        android:text                            ="@string/please_enter_your_order_id_to_check_the_transaciton_status"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintEnd_toEndOf        ="parent"
        app:layout_constraintTop_toTopOf        ="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style                               ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id                          ="@+id/orderIdLayout"
        android:layout_width                ="0dp"
        android:layout_height               ="wrap_content"
        android:layout_marginTop            ="10dp"
        android:hint                        ="@string/order_id"
        app:layout_constraintTop_toBottomOf ="@id/descriptionTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf    ="parent"
        app:boxCornerRadiusBottomStart      ="23dp"
        app:boxCornerRadiusBottomEnd        ="23dp"
        app:boxCornerRadiusTopEnd           ="23dp"
        app:boxCornerRadiusTopStart         ="23dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id              ="@+id/orderIdEdt"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:inputType       ="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style                                   ="@style/Widget.MaterialComponents.Button.TextButton"
        android:id                              ="@+id/sendBtn"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:layout_marginTop                ="20dp"
        android:text                            ="@string/send"
        app:layout_constraintEnd_toEndOf        ="parent"
        app:layout_constraintTop_toBottomOf     ="@id/orderIdLayout"/>

    <com.google.android.material.button.MaterialButton
        style                                   ="@style/Widget.MaterialComponents.Button.TextButton"
        android:id                              ="@+id/cancelBtn"
        android:layout_width                    ="wrap_content"
        android:layout_height                   ="wrap_content"
        android:layout_marginEnd                ="10dp"
        android:layout_marginTop                ="20dp"
        android:text                            ="@string/cancel"
        android:textColor                       ="@color/lightGrayColor"
        app:layout_constraintEnd_toStartOf      ="@id/sendBtn"
        app:layout_constraintTop_toBottomOf     ="@id/orderIdLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>